--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongoose": "^6.2.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
-    "moment": "^2.29.4"
+    "sweetalert2": "^11.10.2"
   }
 }
